# geo-laboratory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: exp001_all_metrics.csv  exp001_city_metrics.csv  exp001_fine_street_effect.csv
docs/experiments/: exp001_shizuoka_road_network.md  exp002_kitagi_quarry_water_detection.md
docs/plans/: exp001_shizuoka_road_network_comparison.md  exp002_kitagi_quarry_water_detection.md
docs/presentations/: exp002_kitagi_quarry_water_detection_presentation.pptx  ~$exp001_shizuoka_road_network_presentation.pptx
docs/reports/: exp001_shizuoka_road_network_report.md  exp002_kitagi_quarry_water_detection_report.md
docs/results/exp001/: exp001_浜松駅_walk_network.html  exp001_焼津駅_walk_network.html  exp001_静岡駅_walk_network.html
notebooks/: exp001_shizuoka_road_network.ipynb  exp002_kitagi_quarry_water_detection.ipynb  git_sync.ipynb
scripts/: generate_exp001_presentation.py  generate_exp002_presentation.py
src/: __init__.py  network_metrics.py  visualization.py
