[project]
name = "geo-laboratory"
version = "0.1.0"
description = "地理空間情報に関する実験リポジトリ"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "python-pptx>=1.0.2",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
]
